--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -1,6 +1,17 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <web-app version="3.1" xmlns="http://xmlns.jcp.org/xml/ns/javaee" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://xmlns.jcp.org/xml/ns/javaee http://xmlns.jcp.org/xml/ns/javaee/web-app_3_1.xsd">
- 
+  <servlet>
+        <servlet-name>ShopControl</servlet-name>
+        <servlet-class>control.ShopControl</servlet-class>
+    </servlet>
+        <welcome-file-list>
+        <welcome-file>ShopControl</welcome-file>
+        <welcome-file>ShopControl</welcome-file>
+    </welcome-file-list>
+        <servlet-mapping>
+        <servlet-name>ShopControl</servlet-name>
+        <url-pattern>/ShopControl</url-pattern>
+    </servlet-mapping>
     <session-config>
         <session-timeout>
             30
